k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiapeats-api-deployment
  labels:
    app: fiapeats-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fiapeats-api
  template:
    metadata:
      labels:
        app: fiapeats-api
    spec:
      containers:
        - name: fiapeats-api-container
          image: dilanclima/tc-fiapeats-api:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /fiapeats/actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /fiapeats/actuator/health
              port: 8080
            initialDelaySeconds: 105
            periodSeconds: 10

      restartPolicy: Always
