k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiapeats-api-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal" 
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: fiapeats-api
