k8s/service_eks.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-fiapeats-service
spec:
  selector:
    app: fiapeats-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
